fix stylesheets. removing extra padding. added !optional

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -25,6 +25,6 @@ i.fa
   margin-left: 5px
 
 .alert-notice
-  @extend .alert-success
+  @extend .alert-success !optional
 .alert-alert
-  @extend .alert-danger
+  @extend .alert-danger !optional
